@@ -56,7 +56,7 @@ INSERTION_POINT
     </tr>
 
     <tr align=left valign=bottom>
-     <td></td>
+     <td bgcolor="%(margin_color)s"></td>
      <td width="100%%" bgcolor="%(margin_color)s">
       <p align=left><font size="-2">(Last updated on %(time_stamp)s.)</font></p>
       <p align=right>Your <a href="mailto:comments@translationproject.org">comments</a> are welcome.</p>
